# PaperUpdater

./: .gitignore  install.sh  pyproject.toml  run.sh
src/: fileops.py  localtracker.py  main.py  paperdl.py
